--- a/services.html
+++ b/services.html
@@ -18,11 +18,11 @@
     <link rel="stylesheet" href="style.css">
 
     <link href="https://cdn.rawgit.com/mistic100/Photo-Sphere-Viewer/3.1.0/dist/photo-sphere-viewer.min.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/threejs/r70/three.min.js"> </script>
-<script src="https://cdn.rawgit.com/mistic100/Photo-Sphere-Viewer/3.1.0/dist/photo-sphere-viewer.min.js"> </script>
-<style>
-  #photosphere { height:600px; width:100%; margin: 0 auto }
-</style>
+    <script src="https://ajax.googleapis.com/ajax/libs/threejs/r70/three.min.js"> </script>
+    <script src="https://cdn.rawgit.com/mistic100/Photo-Sphere-Viewer/3.1.0/dist/photo-sphere-viewer.min.js"> </script>
+    <style>
+      #photosphere { height:600px; width:100%; margin: 0 auto }
+    </style>
 
 </head>
 
@@ -135,27 +135,10 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <section>
-        <div id=”photosphere”> </div>
-
-<script>
-      
-  // 360 viewer
-  var PSV = new PhotoSphereViewer({
-    panorama: 'https://photos.google.com/search/photosphere/photo/AF1QipMKacxFyOQkcEEc8g6xLfPBH4vFpZK84bBSkyeN',
-    container: 'photosphere',
-    loading_img: 'Aquí va la URL del icono',
-    navbar: 'autorotate zoom download fullscreen',
-    caption: 'texto'',
-    default_fov: 65,
-    mousewheel: false,
-    size: {
-      height: 400
-    }
-  });
-
-</script>
-
+    <section class="breadcumb-area bg-img d-flex align-items-center justify-content-center" style="background-image: url(https://carlotaconbotas.github.io/patagonia/img/panoramio-119155969.jpg);">
+        <div class="bradcumbContent">
+            
+        </div>
     </section>
     <!-- ##### Breadcumb Area End ##### -->
 
