--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Patagonia - Parcelas Ríos Lagos Cascadas</title>
+    <title>Parcelas Patagonia - Río Laguna Cascada</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -17,6 +17,8 @@
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="style.css">
     
+
+
 
 </head>
 
@@ -59,7 +61,6 @@
                                     <li class="active"><a href="#list-item-1">Home</a></li>
                                     <li><a href="#list-item-2">Nosotros</a></li>
                                     <li><a href="#list-item-3">Proyectos</a></li>
-                                    <li><a href="services.html">Masterplan</a></li>
                                     <li><a href="#list-item-4">Contacto</a></li>
                                 </ul>
 
@@ -195,10 +196,10 @@
                     </div>
                         <div class="about-key-text">
                             <h6><span class="fa fa-check"></span> Trato directo con dueño, sin comisión</h6>
-                            <h6><span class="fa fa-check"></span> Agua potable y camino servidumbre pavimentado</h6>
-                            <h6><span class="fa fa-check"></span> Arquitectura y construcción </h6>
+                            <h6><span class="fa fa-check"></span> Servicios básicos y camino servidumbre pavimentado</h6>
+                            <h6><span class="fa fa-check"></span> Arquitectura y construcción modular y customizable</h6>
                         </div>
-                        <a href="#" class="btn palatin-btn mt-50">Más Info</a>
+                        <a href="https://www.sur-patagonia.cl" class="btn palatin-btn mt-50">Más Info</a>
                     </div>
                 </div>
 
@@ -293,7 +294,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris sceleri sque.</p>
                         </div>
                         <!-- Book Room -->
-                        <a href="about-us.html" class="book-room-btn btn palatin-btn">Más info</a>
+                        <a href="services.html" class="book-room-btn btn palatin-btn">Más info</a>
                     </div>
                 </div>
 
@@ -311,7 +312,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris sceleri sque.</p>
                         </div>
                         <!-- Book Room -->
-                        <a href="about-us.html" class="book-room-btn btn palatin-btn">Más info</a>
+                        <a href="services.html" class="book-room-btn btn palatin-btn">Más info</a>
                     </div>
                 </div>
 
@@ -329,7 +330,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris sceleri sque.</p>
                         </div>
                         <!-- Book Room -->
-                        <a href="about-us.html" class="book-room-btn btn palatin-btn">Más info</a>
+                        <a href="services.html" class="book-room-btn btn palatin-btn">Más info</a>
                     </div>
                 </div>
 
