--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                                 <!-- Button -->
                                 <div class="menu-btn">
-                                    <a href="#" class="btn palatin-btn">Brochure</a>
+                                    <a href="pdf/brochure.pdf" download="Reporte2Mayo2010" class="btn palatin-btn">Brochure</a>
                                 </div>
 
                             </div>
