--- a/services.html
+++ b/services.html
@@ -73,7 +73,7 @@
 
                                 <!-- Button -->
                                 <div class="menu-btn">
-                                    <a href="pdf/brochure.pdf" download="Reporte2Mayo2010" class="btn palatin-btn">Brochure</a>
+                                    <a href="pdf/brochure.pdf" download="Brochure_Parcelas_Patagaonia" class="btn palatin-btn">Brochure</a>
                                 </div>
 
                             </div>
