--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <h6><span class="fa fa-check"></span> Servicios básicos y camino servidumbre pavimentado</h6>
                             <h6><span class="fa fa-check"></span> Arquitectura y construcción modular y customizable</h6>
                         </div>
-                        <a href="https://www.sur-patagonia.cl" class="btn palatin-btn mt-50">Más Info</a>
+                        <a href="https://www.sur-patagonia.cl" target="_blank"class="btn palatin-btn mt-50">Más Info</a>
                     </div>
                 </div>
 
