--- a/viewer.html
+++ b/viewer.html
@@ -99,17 +99,32 @@
     <section class="align-items-center justify-content-center" >     
         <div id="container"></div>
   
-                        <model-viewer id="modelViewer"
-                          src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-                          ios-src="https://modelviewer.dev/shared-assets/models/Astronaut.usdz"
-                          alt="A 3D model of an astronaut"
-                          poster="model/poster.png"
-                          camera-controls
-                          camera-orbit="65deg 55deg 2.5m"
-                          ar
-                          auto-rotate
-                          camera-controls>    
-                        </model-viewer>
+    <model-viewer 
+    id="modelViewer"
+    bounds="tight" 
+    enable-pan 
+    src="modelo-1.glb" 
+    ios-src=""
+    alt="A 3D model of a tiny House"
+    ar 
+    ar-modes="scene-viewer webxr quick-look" 
+    camera-controls 
+    environment-image="neutral" 
+    poster="poster.png"
+    camera-controls
+    camera-orbit="65deg 55deg 2.5m"
+    auto-rotate
+    shadow-intensity="1">
+      <div class="progress-bar hide" slot="progress-bar">
+          <div class="update-bar"></div>
+      </div>
+      <button slot="ar-button" id="ar-button">
+          View in your space
+      </button>
+      <div id="ar-prompt">
+          <img src="ar_hand_prompt.png">
+      </div>
+    </model-viewer>  
         
 
   
@@ -193,18 +208,32 @@
 
                     <div class="row mb-500">
 
-                        <model-viewer id="modelViewer"
-                          src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-                          ios-src="https://modelviewer.dev/shared-assets/models/Astronaut.usdz"
-                          alt="A 3D model of an astronaut"
-                          poster="model/poster.png"
-                          camera-controls
-                          camera-orbit="65deg 55deg 2.5m"
-                          ar
-                          auto-rotate
-                          camera-controls>    
-                        </model-viewer>
-
+                        <model-viewer 
+    id="modelViewer"
+    bounds="tight" 
+    enable-pan 
+    src="modelo-1-2.glb" 
+    ios-src=""
+    alt="A 3D model of a tiny House"
+    ar 
+    ar-modes="scene-viewer webxr quick-look" 
+    camera-controls 
+    environment-image="neutral" 
+    poster="poster.png"
+    camera-controls
+    camera-orbit="65deg 55deg 2.5m"
+    auto-rotate
+    shadow-intensity="1">
+      <div class="progress-bar hide" slot="progress-bar">
+          <div class="update-bar"></div>
+      </div>
+      <button slot="ar-button" id="ar-button">
+          View in your space
+      </button>
+      <div id="ar-prompt">
+          <img src="ar_hand_prompt.png">
+      </div>
+    </model-viewer>  
                     </div>
                 </div>
             </div>
