--- a/viewer.html
+++ b/viewer.html
@@ -210,31 +210,33 @@
                     <div class="row mb-500">
 
                         <model-viewer 
-    id="modelViewer"
-    bounds="tight" 
-    enable-pan 
-    src="modelo-1-2.glb" 
-    ios-src=""
-    alt="A 3D model of a tiny House"
-    ar 
-    ar-modes="scene-viewer webxr quick-look" 
-    camera-controls 
-    environment-image="neutral" 
-    poster="poster.png"
-    camera-controls
-    camera-orbit="65deg 55deg 2.5m"
-    auto-rotate
-    shadow-intensity="1">
-      <div class="progress-bar hide" slot="progress-bar">
-          <div class="update-bar"></div>
-      </div>
-      <button slot="ar-button" id="ar-button">
-          View in your space
-      </button>
-      <div id="ar-prompt">
-          <img src="ar_hand_prompt.png">
-      </div>
-    </model-viewer>  
+                            id="modelViewer"
+                            bounds="tight" 
+                            enable-pan 
+                            src="modelo-4.glb" 
+                            ios-src=""
+                            alt="A 3D model of a tiny House"
+                            ar 
+                            ar-modes="scene-viewer webxr quick-look" 
+                            camera-controls 
+                            environment-image="neutral" 
+                            poster="poster-4.png"
+                            shadow-intensity="0.68" 
+                            shadow-softness="0.88" 
+                            exposure="0.78" 
+                            camera-orbit="-186.2deg 70.4deg auto"
+                            auto-rotate
+                            shadow-intensity="1">
+                          <div class="progress-bar hide" slot="progress-bar">
+                              <div class="update-bar"></div>
+                          </div>
+                          <button slot="ar-button" id="ar-button">
+                              View in your space
+                          </button>
+                          <div id="ar-prompt">
+                              <img src="ar_hand_prompt.png">
+                          </div>
+                        </model-viewer>  
                     </div>
                 </div>
             </div>
